tests/golden/external/external/external/01_keycloak_helmchart/postgresql/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations: null
  labels:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: external
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: keycloak
    helm.sh/chart: postgresql-10.3.13
  name: keycloak-postgresql
  namespace: syn-external
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/name: postgresql
      role: primary
  serviceName: keycloak-postgresql-headless
  template:
    metadata:
      annotations:
        k8up.io/backupcommand: sh -c 'PGDATABASE="$POSTGRES_DB" PGUSER="$POSTGRES_USER"
          PGPASSWORD="$POSTGRES_PASSWORD" pg_dump --clean'
        k8up.io/file-extension: .sql
        k8up.syn.tools/backupcommand: sh -c 'PGDATABASE="$POSTGRES_DB" PGUSER="$POSTGRES_USER"
          PGPASSWORD="$POSTGRES_PASSWORD" pg_dump --clean'
        k8up.syn.tools/file-extension: .sql
      labels:
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: keycloak
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        helm.sh/chart: postgresql-10.3.13
        role: primary
      name: keycloak-postgresql
    spec:
      affinity:
        nodeAffinity: null
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: primary
                    app.kubernetes.io/instance: keycloak
                    app.kubernetes.io/name: postgresql
                namespaces:
                  - syn-external
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
        - env:
            - name: BITNAMI_DEBUG
              value: 'false'
            - name: POSTGRESQL_PORT_NUMBER
              value: '5432'
            - name: POSTGRESQL_VOLUME_DIR
              value: /bitnami/postgresql
            - name: PGDATA
              value: /bitnami/postgresql/data
            - name: POSTGRES_POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: postgresql-postgres-password
                  name: keycloak-postgresql
            - name: POSTGRES_USER
              value: keycloak
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: postgresql-password
                  name: keycloak-postgresql
            - name: POSTGRES_DB
              value: keycloak
            - name: POSTGRESQL_ENABLE_LDAP
              value: 'no'
            - name: POSTGRESQL_ENABLE_TLS
              value: 'yes'
            - name: POSTGRESQL_TLS_PREFER_SERVER_CIPHERS
              value: 'yes'
            - name: POSTGRESQL_TLS_CERT_FILE
              value: /opt/bitnami/postgresql/certs/tls.crt
            - name: POSTGRESQL_TLS_KEY_FILE
              value: /opt/bitnami/postgresql/certs/tls.key
            - name: POSTGRESQL_LOG_HOSTNAME
              value: 'false'
            - name: POSTGRESQL_LOG_CONNECTIONS
              value: 'false'
            - name: POSTGRESQL_LOG_DISCONNECTIONS
              value: 'false'
            - name: POSTGRESQL_PGAUDIT_LOG_CATALOG
              value: 'off'
            - name: POSTGRESQL_CLIENT_MIN_MESSAGES
              value: error
            - name: POSTGRESQL_SHARED_PRELOAD_LIBRARIES
              value: pgaudit
          image: docker.io/bitnami/postgresql:11.11.0-debian-10-r31
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "keycloak" -d "dbname=keycloak" -h 127.0.0.1
                  -p 5432
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: keycloak-postgresql
          ports:
            - containerPort: 5432
              name: tcp-postgresql
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - 'exec pg_isready -U "keycloak" -d "dbname=keycloak" -h 127.0.0.1
                  -p 5432

                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized
                  ]

                  '
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsUser: 1001
          volumeMounts:
            - mountPath: /opt/bitnami/postgresql/certs
              name: postgresql-certificates
              readOnly: true
            - mountPath: /dev/shm
              name: dshm
            - mountPath: /bitnami/postgresql
              name: data
              subPath: null
      initContainers:
        - command:
            - /bin/sh
            - -cx
            - "chown 1001:1001 /bitnami/postgresql\nmkdir -p /bitnami/postgresql/data\n\
              chmod 700 /bitnami/postgresql/data\nfind /bitnami/postgresql -mindepth\
              \ 1 -maxdepth 1 -not -name \"conf\" -not -name \".snapshot\" -not -name\
              \ \"lost+found\" | \\\n  xargs chown -R 1001:1001\nchmod -R 777 /dev/shm\n\
              cp /tmp/certs/* /opt/bitnami/postgresql/certs/\nchown -R 1001:1001 /opt/bitnami/postgresql/certs/\n\
              chmod 600 /opt/bitnami/postgresql/certs/tls.key\n"
          image: docker.io/bitnami/bitnami-shell:10
          imagePullPolicy: Always
          name: init-chmod-data
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsUser: 0
          volumeMounts:
            - mountPath: /bitnami/postgresql
              name: data
              subPath: null
            - mountPath: /dev/shm
              name: dshm
            - mountPath: /tmp/certs
              name: raw-certificates
            - mountPath: /opt/bitnami/postgresql/certs
              name: postgresql-certificates
      securityContext:
        fsGroup: 1001
      volumes:
        - name: raw-certificates
          secret:
            secretName: keycloak-postgresql-tls
        - emptyDir: {}
          name: postgresql-certificates
        - emptyDir:
            medium: Memory
            sizeLimit: 1Gi
          name: dshm
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
