tests/golden/external/external/external/01_keycloak_helmchart/postgresql/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.3.13
    service.alpha.kubernetes.io/tolerate-unready-endpoints: 'true'
  name: keycloak-postgresql-headless
  namespace: syn-external
spec:
  clusterIP: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: postgresql
  type: ClusterIP
