tests/golden/external/external/external/01_keycloak_helmchart/postgresql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.3.13
  name: keycloak-postgresql
  namespace: syn-external
spec:
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: postgresql
    role: primary
  type: ClusterIP
